--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,13 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+// .redColour, .redColour .sc-ion-action-sheet-md {
+//   color: red !important;
+// }
+
+.md .action-sheet-destructive,
+.action-sheet-destructive .sc-ion-action-sheet-md {
+    color:red !important;
+}
