--- a/src/app/pages/fab/fab.page.html
+++ b/src/app/pages/fab/fab.page.html
@@ -13,14 +13,26 @@
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button><ion-icon name="logo-facebook" (click)="whatIClick('facebook')"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-twitter" (click)="whatIClick('twitter')"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-youtube" (click)="whatIClick('youtube')"></ion-icon></ion-fab-button>
+      <ion-fab-button color="facebook">
+        <ion-icon name="logo-facebook" (click)="whatIClick('facebook')"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="twitter">
+        <ion-icon name="logo-twitter" (click)="whatIClick('twitter')"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="youtube">
+        <ion-icon name="logo-youtube" (click)="whatIClick('youtube')"></ion-icon>
+      </ion-fab-button>
     </ion-fab-list>
     <ion-fab-list side="start">
-      <ion-fab-button><ion-icon name="logo-vimeo" (click)="whatIClick('vimeo')"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-google" (click)="whatIClick('google')"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-github" (click)="whatIClick('github')"></ion-icon></ion-fab-button>
+      <ion-fab-button color="vimeo">
+        <ion-icon name="logo-vimeo" (click)="whatIClick('vimeo')"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="google">
+        <ion-icon name="logo-google" (click)="whatIClick('google')"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="github">
+        <ion-icon name="logo-github" (click)="whatIClick('github')"></ion-icon>
+      </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 
