--- a/src/app/pages/grid/grid.page.html
+++ b/src/app/pages/grid/grid.page.html
@@ -3,11 +3,10 @@
 <!-- <ion-content class="ion-padding"> -->
 <ion-content>
 
-
-  <ion-grid>
+  <ion-grid fixed>
     <ion-row>
-      <ion-col *ngFor="let item of [1,1,1,1, 1,1,1,1, 1,1,1,1]">
-
+      <ion-col  size="12" size-lg="3" size-md="4" size-sm="6"
+                *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1]">
         <ion-card>
           <ion-img src="/assets/stan-lee.jpg"></ion-img>
         </ion-card>
