--- a/src/app/pages/infinite/infinite.page.html
+++ b/src/app/pages/infinite/infinite.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Infinite"></app-header>
+<app-header titulo="Infinite-Scrool"></app-header>
 
 
 <ion-content class="ion-padding">
