--- a/src/app/pages/avatar/avatar.page.html
+++ b/src/app/pages/avatar/avatar.page.html
@@ -5,7 +5,7 @@
       <ion-back-button defaultHref="/" color="primary"></ion-back-button>
     </ion-buttons>
 
-    <ion-title color="primary">avatar</ion-title>
+    <ion-title color="primary">Avatar</ion-title>
 
     <ion-buttons slot="end">
       <ion-avatar>
