--- a/src/app/pages/button/button.page.html
+++ b/src/app/pages/button/button.page.html
@@ -5,7 +5,7 @@
       <ion-back-button defaultHref="/" color="primary"></ion-back-button>
     </ion-buttons>
 
-    <ion-title color="primary">button</ion-title>
+    <ion-title color="primary">Buttons</ion-title>
 
     <ion-buttons slot="end">
       <ion-button (click)="onClick()" color="danger">
