--- a/src/app/pages/list-reorder/list-reorder.page.html
+++ b/src/app/pages/list-reorder/list-reorder.page.html
@@ -5,7 +5,14 @@
       <ion-back-button defaultHref="/" color="primary"></ion-back-button>
     </ion-buttons>
 
-    <ion-title>List - Reorder</ion-title>
+    <ion-title color="primary">List - Reorder</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="toggleReorderGroup()" color="secondary">
+        <ion-icon name="radio-button-on-outline" *ngIf="!reorderGroup?.disabled" color="success"></ion-icon>
+        <ion-icon name="radio-button-off-outline" *ngIf="reorderGroup?.disabled" color="danger"></ion-icon>
+      </ion-button>
+    </ion-buttons>
 
   </ion-toolbar>
 </ion-header>
@@ -21,12 +28,14 @@
 
   <ion-list>
 
-    <ion-reorder-group (ionItemReorder)="doReorder($event)"
-                       disabled="false">
+    <ion-reorder-group (ionItemReorder)="doReorder($event)" disabled="false">
 
       <ion-item *ngFor="let personaje of personajes">
         <ion-label>{{personaje}}</ion-label>
-        <ion-reorder slot="end"></ion-reorder>
+        <!-- <ion-reorder slot="end"></ion-reorder> -->
+        <ion-reorder slot="end">
+          <ion-icon name="swap-vertical-outline"></ion-icon>
+        </ion-reorder>
       </ion-item>
 
     </ion-reorder-group>
