--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -1,13 +1,17 @@
 <ion-header class="ion-no-border" translucent>
   <ion-toolbar>
-    <ion-title>Modal Page</ion-title>
+    <ion-title>{{nombre}} - {{pais}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 
-  <ion-button (click)="salirSingArgumentos()" expand="block">
+  <ion-button (click)="salirSinArgumentos()" expand="block">
     Salir sin argumentos
+  </ion-button>
+
+  <ion-button (click)="salirConArgumentos()" expand="block">
+    Salir con argumentos
   </ion-button>
 
 </ion-content>
