--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <ion-footer>
   <ion-toolbar>
 
-    <ion-title class="ion-text-capitalize">
+    <ion-title class="ion-text-capitalize" color="primary">
       {{ titulo }}
     </ion-title>
 
