--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       </ion-back-button>
     </ion-buttons>
 
-    <ion-title class="ion-text-capitalize">
+    <ion-title class="ion-text-capitalize" color="primary">
       {{ titulo }}
     </ion-title>
 
