--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border" translucent>
   <ion-toolbar>
-    <ion-title>{{nombre}} - {{pais}}</ion-title>
+    <ion-title color="primary">{{nombre}} - {{pais}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
