--- a/src/app/pages/infinite/infinite.page.html
+++ b/src/app/pages/infinite/infinite.page.html
@@ -12,7 +12,7 @@
 
   <ion-list>
     <ion-item *ngFor="let item of data; let i = index">
-      <ion-label>item {{ i + 1 }}</ion-label>
+      <ion-label>Item: {{ i + 1 }}</ion-label>
     </ion-item>
   </ion-list>
 
