--- a/src/app/pages/popover/popover.page.html
+++ b/src/app/pages/popover/popover.page.html
@@ -8,7 +8,7 @@
     <ion-title color="primary">Popover</ion-title>
 
     <ion-buttons slot="end">
-      <ion-button (click)="presentPopover()" color="primary">
+      <ion-button (click)="presentPopover($event)" color="primary">
         <ion-icon slot="icon-only" name="person-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -19,7 +19,7 @@
 
 <ion-content class="ion-padding">
 
-  <ion-button (click)="presentPopover()" expand="block">
+  <ion-button (click)="presentPopover($event)" expand="block">
     Click me
   </ion-button>
 
@@ -28,7 +28,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="presentPopover()" color="primary">
+      <ion-button (click)="presentPopover($event)" color="primary">
         <ion-icon slot="icon-only" name="person-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
