--- a/src/app/pages/segment/segment.page.html
+++ b/src/app/pages/segment/segment.page.html
@@ -27,15 +27,37 @@
 <ion-content class="ion-padding">
 
   <ion-list>
-    <ion-item *ngFor="let heroe of superheroes | async | filtro:textoBuscar:'publisher'">
+    <ion-item *ngFor="let heroe of (superheroes | async) | filtro:textoBuscar:'publisher'"
+              class="animate__animated animate__fadeIn">
       <ion-label>
-        <h3> {{heroe.superhero}} <small> ({{heroe.alter_ego}}) </small></h3>
-        <p> {{heroe.first_appearance}} </p>
+        <h3>
+          {{heroe.superhero}}
+          <small>
+            ({{heroe.alter_ego}})
+          </small>
+        </h3>
+        <p>
+          {{heroe.first_appearance}}
+        </p>
       </ion-label>
       <ion-label slot="end" class="ion-text-right">{{heroe.publisher}}</ion-label>
     </ion-item>
   </ion-list>
 
+  <ion-list *ngIf="(superheroes | async) === null">
+    <ion-item *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1,1]">
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+      <ion-skeleton-text slot="end" style="width: 50px; height: 50px;"></ion-skeleton-text>
+      <!-- <ion-skeleton-text slot="end" style="width:120px"></ion-skeleton-text> -->
+    </ion-item>
+  </ion-list>
 
 </ion-content>
 
